loginBiometric added, but not used

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.mikko.todo">
+    <uses-permission android:name="android.permission.USE_BIOMETRIC"/>
 
     <application
         android:allowBackup="true"
@@ -14,6 +15,21 @@
         android:theme="@style/Theme.ToDo"
         tools:targetApi="31">
         <activity
+            android:name=".login.LoginActivity"
+            android:theme="@style/Theme.ToDo.NoActionBar"
+            android:exported="true">
+
+        </activity>
+        <!--<activity android:name=".login.EnableBiometricLoginActivity"
+            android:theme="@style/Theme.ToDo.NoActionBar"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>-->
+        <activity
             android:name=".MainActivity"
             android:theme="@style/Theme.ToDo.NoActionBar"
             android:exported="false" />
@@ -23,7 +39,6 @@
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
