--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,27 +2,41 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'org.jetbrains.kotlin.plugin.serialization'
+    id 'androidx.navigation.safeargs.kotlin'
     id 'org.jetbrains.kotlin.kapt'
-    id 'io.realm.kotlin'
+    //id 'io.realm.kotlin'
 }
 apply plugin: org.jetbrains.kotlinx.serialization.gradle.SerializationGradleSubplugin
 apply plugin: 'kotlinx-serialization'
+apply plugin: 'com.android.application'
+apply plugin: 'org.jetbrains.kotlin.android'
+
 android {
     compileSdk 33
 
     defaultConfig {
         applicationId "com.mikko.todo"
-        minSdk 21
+        minSdk 24
         targetSdk 33
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += [
+                        "room.schemeLocation":"$projectDir/shemas".toString(),
+                        "room.incremental":"true",
+                        "room.expandProjection":"true"
+                ]
+            }
+        }
     }
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -39,45 +53,46 @@ android {
 }
 
 dependencies {
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
 
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.7.0'
+    implementation "androidx.biometric:biometric:1.1.0"
+    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+
+
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
-    implementation 'io.realm:realm-gradle-plugin:10.11.1'
-    implementation("com.google.android.material:material:1.7.0")
-    implementation("androidx.constraintlayout:constraintlayout:2.1.4")
-    implementation("io.insert-koin:koin-android:3.2.0")
-    implementation("org.jetbrains.kotlinx:kotlinx-datetime:0.4.0")
-    implementation("dev.icerock.moko:mvvm-core:0.13.1")
-    implementation("dev.icerock.moko:mvvm-livedata:0.13.1")
-    implementation("dev.icerock.moko:mvvm-internal:0.13.1")
-    implementation("dev.icerock.moko:mvvm-internal-android:0.13.1")
-    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.5.1")
-    implementation("androidx.navigation:navigation-fragment:2.5.3")
-    implementation("androidx.core:core:1.9.0")
-    implementation("androidx.navigation:navigation-ui-ktx:2.5.3")
-    implementation("com.github.bumptech.glide:glide:4.13.2")
-    implementation("androidx.preference:preference:1.2.0")
+
+    implementation("androidx.work:work-runtime-ktx:2.8.1")
+    implementation("androidx.preference:preference-ktx:1.2.0")
     implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.1.0")
-    annotationProcessor("com.github.bumptech.glide:compiler:4.13.2")
-    implementation("com.airbnb.android:lottie:5.2.0")
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.6.1")
+
+    //implementation 'io.realm:realm-gradle-plugin:10.11.1'
+    implementation 'io.insert-koin:koin-android:3.2.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-datetime:0.4.0'
     implementation 'io.ktor:ktor-serialization-kotlinx-json:2.0.1'
-    implementation 'io.ktor:ktor-client-content-negotiation:2.0.1'
-    implementation 'io.ktor:ktor-client-cio:2.0.1'
-    implementation 'io.ktor:ktor-client-json:2.1.0'
-    implementation 'io.ktor:ktor-client-auth:2.0.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-core:1.3.3'
-    implementation 'io.ktor:ktor-client-serialization:2.1.0'
-    implementation 'io.ktor:ktor-client-core:2.1.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
-    implementation 'io.realm.kotlin:library-base:1.0.2'
-    implementation("androidx.work:work-runtime-ktx:2.7.1")
-    implementation("io.ktor:ktor-client-serialization:2.0.1")
-    implementation("org.jetbrains.kotlinx:kotlinx-datetime:0.4.0")
+
+    implementation 'dev.icerock.moko:mvvm-core:0.13.1'
+    implementation 'dev.icerock.moko:mvvm-livedata:0.13.1'
+    implementation 'dev.icerock.moko:mvvm-internal:0.13.1'
+    implementation 'dev.icerock.moko:mvvm-internal-android:0.13.1'
+
+    implementation 'com.google.code.gson:gson:2.10.1'
+
+
+    //implementation 'io.realm.kotlin:library-base:1.0.2'
+
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+}
+kapt {
+    correctErrorTypes true
 }
