--- a/build.gradle
+++ b/build.gradle
@@ -2,24 +2,24 @@
 
 buildscript {
     repositories {
+        gradlePluginPortal()
         google()
         mavenCentral()
-        maven{ url "https://jitpack.io" }
-        maven{ url "https://jcenter.bintray.com" }
+        maven { url "https://jitpack.io/" }
+        maven { url "https://jcenter.bintray.com/" }
     }
     dependencies {
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.10")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.21")
         classpath("com.android.tools.build:gradle:7.2.2")
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3")
-        classpath("org.jetbrains.kotlin:kotlin-serialization:1.7.10")
-        classpath("io.realm.kotlin:gradle-plugin:1.0.2")
+        classpath("org.jetbrains.kotlin:kotlin-serialization:1.8.0")
+        //classpath("io.realm.kotlin:gradle-plugin:1.0.2")
     }
 }
 plugins {
     id 'com.android.application' version '7.2.1' apply false
     id 'com.android.library' version '7.2.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
-    id 'org.jetbrains.kotlin.jvm' version "1.3.50" apply false
     id "org.jetbrains.kotlin.plugin.serialization" version "1.7.10" apply false
     id "org.jetbrains.kotlin.kapt" version "1.6.20" apply false
 }
