--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,7 +85,8 @@ dependencies {
     implementation 'dev.icerock.moko:mvvm-internal-android:0.13.1'
 
     implementation 'com.google.code.gson:gson:2.10.1'
-
+    
+    implementation "com.dolatkia:animated-theme-manager:1.1.4"
 
     //implementation 'io.realm.kotlin:library-base:1.0.2'
 
